--- a/project22/index.html
+++ b/project22/index.html
@@ -51,7 +51,7 @@
             <button class="hBtn">Enroll Now</button>
         </div>
         <div class="h-img">
-            <img src="/project22/Images/home-main.png" alt="">
+            <img src="Images/home-main.png" alt="">
         </div>
     </section>
     <!-- home section ends here -->
