Update links path

--- a/project22/index.html
+++ b/project22/index.html
@@ -51,7 +51,7 @@
             <button class="hBtn">Enroll Now</button>
         </div>
         <div class="h-img">
-            <img src="/Images/home-main.png" alt="">
+            <img src="Images/home-main.png" alt="">
         </div>
     </section>
     <!-- home section ends here -->
@@ -124,7 +124,7 @@
     <section id="ChooseUs">
         <div class="ch-container">
             <div class="ch-img">
-                <img src="/project22/Images/choose-img.png" alt="">
+                <img src="Images/choose-img.png" alt="">
             </div>
             <div class="ch-contain">
                 <h4>The Reason</h4>
@@ -265,7 +265,7 @@
                 </div>
             </div>
             <div class="bmi-img">
-                <img src="project22/Images/calculate-img.png" alt="">
+                <img src="Images/calculate-img.png" alt="">
             </div>
         </div>
     </section>
